# ff7-terraform

./: .cursorignore  .cursorrules  .gitignore  .windsurfrules  CLAUDE.md  README.md  build.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  updater.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
data/: field.tbl  wm0.ev
scripts/: extract-world-scripts.ts  get-unused-locations.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  updater.rs
src/@types/: index.d.ts
src/components/: Modal.tsx
src/components/layout/: Navbar.tsx  StatusBar.tsx
src/components/map/: MapPicker.tsx  MapViewer.tsx  ModelOverlay.tsx  constants.ts  modelTextures.ts  types.ts
src/components/modals/: AboutModal.tsx  AddScriptModal.tsx  UVEditorModal.tsx
src/components/ui/: tabs.tsx  (+4 more)
src/contexts/: GridSelectionContext.tsx
src/data/: scenes.json
src/ff7/: encwfile.ts  endian.ts  evfile.test.ts  evfile.ts  fftext.ts  fieldtblfile.ts  lgp.ts  lzss.ts  mapfile.ts  mesfile.ts  texfile.ts  world.ts  worldscript.test.ts  worldscript.ts
src/hooks/: types.ts  useAppState.ts  useEncountersState.ts  useFF7State.ts  useKeyboardShortcuts.ts  useLgpState.ts  useLocationsState.ts  useMapState.ts  useMessagesState.ts  useScriptState.ts  useStatusBar.tsx
src/lib/: ff7-data.ts  field-options.ts  map-data.ts  utils.ts  worldscript-parser.terms.js  worldscript-parser.ts  worldscript.lr
~/.tauri/: ff7-terraform.key.pub
(+44 files in other folders)
